--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -9,5 +9,29 @@
 };
 
 @mixin button {
-    
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-weight: bold;
 } 
+
+@mixin dark {
+    background-color: $insta-blue;
+    color: white;
+}
+
+@mixin light {
+    color: $insta-blue;
+    background-color: white;
+}
+
+@mixin padding-info {
+    :first-child{
+        padding-right: 20px;
+    }
+    :last-child{
+        padding-left: 20px;
+    }
+      
+}
