--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -1,2 +1,5 @@
 //Import Component files
-@import './header'
+@import './header';
+@import './info';
+@import './highlights';
+@import './navigation';
